--- a/presentations/Blog_Final.ipynb
+++ b/presentations/Blog_Final.ipynb
@@ -41,7 +41,7 @@
     "## Asking the right question\n",
     "The question we aimed to answer in our project was: What is the impact of proposed dams on protected areas globally?\n",
     "\n",
-    "We aimed to answer this by making two calculations for every country in the world---the **total length of rivers** on protected lands affected by proposed dams and the **total area of protected lands** affected by proposed dams.\n"
+    "We worked to answer this by making two calculations for every country in the world---the **total length of rivers** on protected lands affected by proposed dams and the **total area of protected lands** affected by proposed dams."
    ]
   },
   {
@@ -719,6 +719,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Future work\n",
+    "\n",
+    "xxxx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### For more information about this project, including the full code and data analysis, see the <a href=\" https://github.com/stephlshep/global-dam-impacts\"> repository on GitHub</a>."
    ]
   },
@@ -768,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
