--- a/presentations/Project_Summary.ipynb
+++ b/presentations/Project_Summary.ipynb
@@ -79,19 +79,20 @@
    "source": [
     "### Methods\n",
     "\n",
-    "In order\n",
-    "GitHub Repository: https://github.com/stephlshep/global-dam-impacts.git\n",
-    "\n",
-    "* exploration-notebooks/dam-impacts-on-protected-areas-calc.ipynb: A JupyterNotebook that (1) contains functions that combine World Database of Protected Areas and Ramsar Data for a country or continent to create a full protected areas dataset for the desired region and (2) calculates the total length of rivers on protected lands and total area of protected lands that are affected by proposed dams by country for a desired continent. \n",
-    "* exploration-notebooks/dam-impacts-on-protected-areas-visualization.ipynb: A JupyterNotebook that creates three example maps for Burkina Faso, with all rivers stratified by Degree of Regulation, (1) all current rivers and protected areas, (2) all current rivers that overlap protected areas, and (4) all projected future rivers that overlap protected areas. It also provides (4) all current rivers and protected areas in all Africa by Degree of Regulation.\n",
-    "* exploration-notebooks/explore-proposed-dams-and-ramsar-areas.ipynb A JupyterNotebook exploring the data for a preliminary analysis of FHReD and Ramsar Site data. Use this notebook to better understand proposed dams globally and how they overlap Ramsar protected areas."
+    "The research question was addressed through combining the openly available datasets above and Python. Our step-by-step approach was as follows:\n",
+    "1. **Combine protected areas datasets** - First we created a function that combined the two protected areas datasets: WDPA and Ramsar.\n",
+    "2. **Identify large rivers with proposed dams** - Next we took the FFR dataset and subtracted the current DOR from the planned DOR for all rivers to filter for only rivers with planned dams. We also filtered to only look at large rivers to keep processing time manageable.\n",
+    "3. **Identify where rivers and protected areas intersect** - Then we performed two 'overlays' with the open source GIS package Geopandas: \n",
+    "    * Overlay rivers on protected areas and return only the **rivers** that intersect protected areas.\n",
+    "    * Do the reverse of above to return only the **protected areas** that are intersected by rivers.\n",
+    "4. **Add it all up** - Finally we summed the above data by country to get the total river length affected by country and the total protected area impacted by country.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Results"
+    "### Results\n"
    ]
   },
   {
@@ -99,6 +100,13 @@
    "metadata": {},
    "source": [
     "### Implications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For more information about this project, including the full code and data analysis, see the <a href=\" https://github.com/stephlshep/global-dam-impacts\"> repository on GitHub</a>."
    ]
   },
   {
@@ -139,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
