--- a/presentations/Project_Summary.ipynb
+++ b/presentations/Project_Summary.ipynb
@@ -26,8 +26,8 @@
    "source": [
     "### Goals\n",
     "This project aims to understand how proposed dams could affect protected areas around the globe. To do accomplish this goal we: \n",
-    "* Analyze proposed dams by continent, \n",
-    "* Combine Ramsar and World Database of Protected Areas datasets to create full datasets of protected areas, \n",
+    "* Analyze proposed dams by continent. \n",
+    "* Combine Ramsar and World Database of Protected Areas datasets to create full datasets of protected areas.\n",
     "* Calculate the total length of rivers on protected lands affected by proposed dams by country.\n",
     "* Calculate the total area of protected lands affected by proposed dams by country. \n",
     "* Create data visualizations of rivers by degree of regulation paired with protected areas."
@@ -59,18 +59,16 @@
     "    * url=\"https://ndownloader.figshare.com/files/23354894\"\n",
     "    \n",
     "#### Original Data\n",
-    "* Free Flowing Rivers Current & Future - https://www.nature.com/articles/s41586-019-1111-9\n",
+    "* <a href=\"https://www.nature.com/articles/s41586-019-1111-91\">Free Flowing Rivers Current & Future</a>  - \n",
     "    * This dataset contains a shapefile with all rivers from around the world and their current and projected degree of regulation due to proposed dams.\n",
-    "* Future Hydropower Reservoirs and Dams (FHReD) - http://globaldamwatch.org/fhred/\n",
-    "    * Geographic database of dams > 1MW that are planned or underconstruction.\n",
-    "* GlObal geOreferenced Database of Dams (GOODD) - http://globaldamwatch.org/goodd/\n",
+    "* <a href=\"http://globaldamwatch.org/fhred/\">Future Hydropower Reservoirs and Dams (FHReD)</a> - \n",
+    "    * Geographic database of dams > 1MW that are planned or under construction.\n",
+    "* <a href=\"http://globaldamwatch.org/goodd/\">GlObal geOreferenced Database of Dams (GOODD)</a> - \n",
     "    * This dataset contains the geographic locations of dams identified from Google Earth's satellite data. \n",
-    "* Global Reservoir and Dam Database (GRand) - http://globaldamwatch.org/grand/\n",
-    "    * This database collates record for dams and river around the globe form multiple sources. The data set is curated by McGill University, Canada.\n",
-    "* Ramsar Site Database - https://rsis.ramsar.org/)\n",
+    "* <a href=\"https://rsis.ramsar.org/\">Ramsar Site Database</a> \n",
     "    * This database contains a shapefile of wetland areas of critical importance as identified under the Convention on Wetlands (1971).\n",
-    "* World Database of Protected Areas (WDPA) - https://www.protectedplanet.net/\n",
-    "    * This dataset contains a shapefile with protected areas from around the world."
+    "* <a href=\"https://www.protectedplanet.net/\">World Database of Protected Areas (WDPA)</a>\n",
+    "    * This database collates record for dams and river around the globe form multiple sources. The data set is curated by McGill University, Canada."
    ]
   },
   {
@@ -147,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
