--- a/final-notebooks/dam-impacts-on-protected-areas-calc-asia.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-asia.ipynb
@@ -30,6 +30,10 @@
     "\n",
     "import seaborn as sns\n",
     "\n",
+    "from geopandas import GeoDataFrame as gdf\n",
+    "from geopandas import GeoSeries as gs\n",
+    "from shapely.geometry import Point, Polygon\n",
+    "\n",
     "import earthpy as et\n",
     "import earthpy.plot as ep\n",
     "import contextily as ctx"
@@ -179,6 +183,33 @@
     "# Reproject data to World Equidistant Cylindrical, datum WGS84, units meters, EPSG 4087\n",
     "country_borders = country_borders.to_crs('epsg:4087')\n",
     "continent_borders = continent_borders.to_crs('epsg:4087')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open the dams csv files with pandas\n",
+    "fname = os.path.join(\"earthpy-downloads\", \"future_dams_2015.csv\")\n",
+    "df = pd.read_csv(fname)\n",
+    "\n",
+    "# Covert the pandas dataframe to a shapefile for plotting\n",
+    "# Set output path for shp\n",
+    "dams_path = os.path.join('earthpy-downloads')\n",
+    "if not os.path.exists(dams_path):\n",
+    "    os.mkdir(dams_path)\n",
+    "\n",
+    "# Define the geometry for the points\n",
+    "geometry = [Point(xy) for xy in zip(df.Lon_Cleaned, df.LAT_cleaned)]\n",
+    "crs = {'init': 'epsg:4326'}\n",
+    "geo_df = gdf(df, crs=crs, geometry=geometry)\n",
+    "geo_df.to_file(driver='ESRI Shapefile', filename=os.path.join(\n",
+    "    dams_path, 'proposed_dams.shp'))\n",
+    "\n",
+    "# Open the proposed dams shapefile with geopandas\n",
+    "dams_all = gpd.read_file(os.path.join(dams_path, \"proposed_dams.shp\"))"
    ]
   },
   {
@@ -687,6 +718,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get continent dams for plotting\n",
+    "asia_dams = dams_all[dams_all['Continent'] == \"Asia\"]\n",
+    "\n",
+    "asia_dams = asia_dams.to_crs('epsg:4087')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -733,15 +776,19 @@
     "                color='red', edgecolor='none')\n",
     "dor_over20.plot(ax=ax,\n",
     "                color='magenta', edgecolor='none')\n",
+    "asia_dams.plot(ax=ax,\n",
+    "                   color='gray', markersize=50)\n",
     "ctx.add_basemap(ax, url=ctx.providers.Stamen.Terrain, zoom=0)\n",
     "ax.set_title(\n",
-    "    'Figure 1: All Protected Areas\\n And Large Rivers (Class > 2) by Degree of Regulation in Asia', size=20)\n",
+    "    'Figure 1: All Protected Areas, Proposed Dams,\\n And Large Rivers (Class > 2) by Degree of Regulation in Asia', size=20)\n",
     "ax.set_axis_off()\n",
-    "ax.legend(handles=[black_line, blue_line, yellow_line, orange_line, red_line, magenta_line, lightgreen_patch],\n",
+    "ax.legend(handles=[black_line, blue_line, yellow_line, orange_line, red_line, magenta_line, lightgreen_patch, black_dot],\n",
     "          fontsize=15,\n",
     "          frameon=True,\n",
     "          loc=('lower right'),\n",
-    "          title=\"LEGEND\")"
+    "          title=\"LEGEND\")\n",
+    "ax.text(0.5, -0.1, \"Data Source: World Database of Protected Areas, Ramsar Site Database,\\n FhRED Proposed Dams, Free Flowing Rivers\",\n",
+    "        size=12, ha=\"center\", transform=ax.transAxes)"
    ]
   },
   {
