added export to csv for calculation outputs of affected rivers and areas.

--- a/final-notebooks/dam-impacts-on-protected-areas-calc-sam.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-sam.ipynb
@@ -476,7 +476,7 @@
     }
    ],
    "source": [
-    "# Preview Data\n",
+    "# View data\n",
     "sa_output.head()"
    ]
   },
@@ -596,6 +596,7 @@
     }
    ],
    "source": [
+    "# Remove rows with 0 values for rivers.\n",
     "sa_affected = sa_output[sa_output.Affected_KM !=0]\n",
     "sa_affected = sa_output[sa_output.Affected_Area !=0]\n",
     "\n",
@@ -605,28 +606,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sa_affected' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-d15d4e43cab6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msa_affected\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'sa_affected' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sa_affected.info()"
+    "# Export to csv.\n",
+    "affected_path = os.path.join(wd_path, \"sa_affected.csv\" )\n",
+    "sa_affected.to_csv(affected_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -637,7 +628,7 @@
        "Text(0.5, -0.1, 'Data Source: Free Flowing Rivers Database')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -674,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +674,7 @@
        "Text(0.5, -0.1, 'Data Source: World Database of Protected Areas and Ramsar Site Database')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -721,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -763,10 +754,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f6febee6890>"
+       "<matplotlib.legend.Legend at 0x7fcd900df490>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -824,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
