--- a/final-notebooks/dam-impacts-on-protected-areas-calc-asia.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-asia.ipynb
@@ -794,7 +794,7 @@
     "                          markerfacecolor='gray', label='Proposed Dam Site')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
-    "asia_border.plot(ax=ax, color=\"none\",  edgecolor=\"black\", linewidth=2)\n",
+    "#asia_border.plot(ax=ax, color=\"none\",  edgecolor=\"black\", linewidth=2)\n",
     "wdpa_ramsar_asia.plot(ax=ax, color=\"lightgreen\", edgecolor='none')\n",
     "dor_0to5.plot(ax=ax,\n",
     "              color='blue', edgecolor='none')\n",
