adding europe and NAM notebooks

--- a/final-notebooks/dam-impacts-on-protected-areas-calc-europe.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-europe.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## South America\n",
+    "## Europe\n",
     "This notebook contains functions that combine World Database of Protected Areas and Ramsar data for a country or continent to create a full protected areas dataset for the desired region and calculates the total length of rivers on protected lands and total area of protected lands that are affected by proposed dams by country for a desired continent. "
    ]
   },
@@ -77,8 +77,8 @@
     "# Free flowing rivers future DOR\n",
     "et.data.get_data(url=\"https://ndownloader.figshare.com/files/23273216\")\n",
     "\n",
-    "# World Database of Protected Areas South America\n",
-    "et.data.get_data(url=\"https://ndownloader.figshare.com/files/23355335\")\n",
+    "# World Database of Protected Areas Europe\n",
+    "et.data.get_data(url=\"https://ndownloader.figshare.com/files/23355098\")\n",
     "\n",
     "# Ramsar Sites\n",
     "et.data.get_data(url=\"https://ndownloader.figshare.com/files/22507082\")\n",
@@ -265,11 +265,11 @@
    "outputs": [],
    "source": [
     "# Get all current rivers in selected continent\n",
-    "all_rivers_0to5_sam = dor_0to5[dor_0to5['CONTINENT'] == \"South America\"]\n",
-    "all_rivers_5to10_sam = dor_5to10[dor_5to10['CONTINENT'] == \"South America\"]\n",
-    "all_rivers_10to15_sam = dor_10to15[dor_10to15['CONTINENT'] == \"South America\"]\n",
-    "all_rivers_15to20_sam = dor_15to20[dor_15to20['CONTINENT'] == \"South America\"]\n",
-    "all_rivers_over20_sam = dor_over20[dor_over20['CONTINENT'] == \"South America\"]"
+    "all_rivers_0to5_eur = dor_0to5[dor_0to5['CONTINENT'] == \"Europe\"]\n",
+    "all_rivers_5to10_eur = dor_5to10[dor_5to10['CONTINENT'] == \"Europe\"]\n",
+    "all_rivers_10to15_eur = dor_10to15[dor_10to15['CONTINENT'] == \"Europe\"]\n",
+    "all_rivers_15to20_eur = dor_15to20[dor_15to20['CONTINENT'] == \"Europe\"]\n",
+    "all_rivers_over20_eur = dor_over20[dor_over20['CONTINENT'] == \"Europe\"]"
    ]
   },
   {
@@ -328,7 +328,7 @@
     "# For loop to (1) calculating difference in DOR between planned and current, (2) pulling only rivers with class > 3,\n",
     "# (3) projecting rivers, (4) buffer by 1/100 km to become polys for overlay fuction, (5) pull only needed columns\n",
     "\n",
-    "gdf_list = [all_rivers_0to5_sam, all_rivers_5to10_sam, all_rivers_10to15_sam, all_rivers_15to20_sam, all_rivers_over20_sam]\n",
+    "gdf_list = [all_rivers_0to5_eur, all_rivers_5to10_eur, all_rivers_10to15_eur, all_rivers_15to20_eur, all_rivers_over20_eur]\n",
     "river_list_prj = []\n",
     "\n",
     "for shp in gdf_list:\n",
@@ -378,10 +378,10 @@
     }
    ],
    "source": [
-    "# Analyze South America\n",
+    "# Analyze Europe\n",
     "# Open WDPA polygons\n",
     "wdpa_sa_polys = gpd.read_file(os.path.join(wd_path,\n",
-    "                                           \"earthpy-downloads\", \"WDPA_S_America\", \"WDPA_S_America.shp\"))\n",
+    "                                           \"earthpy-downloads\", \"WDPA_Europe\", \"WDPA_Europe.shp\"))\n",
     "\n",
     "# Data cleaning - remove polygons with no area & take only the needed columns from WDPA dataset\n",
     "wdpa_sa_polys = wdpa_sa_polys[wdpa_sa_polys.geometry != None]\n",
@@ -398,7 +398,7 @@
     "wdpa_sa_polys = wdpa_sa_polys.to_crs('epsg:4087')\n",
     "\n",
     "# Get the combined WDPA & ramsar areas for selected continent\n",
-    "wdpa_ramsar_sa = all_pa_continent(wdpa_sa_polys, ramsar_polys, \"South America\")\n",
+    "wdpa_ramsar_sa = all_pa_continent(wdpa_sa_polys, ramsar_polys, \"Europe\")\n",
     "\n",
     "# Getting river length affected\n",
     "# Overlay current rivers on protected areas for selected continent to get ONLY rivers the overlap PAs\n",
@@ -411,7 +411,7 @@
     "    river_overlap_sa, wdpa_ramsar_sa, how='intersection')\n",
     "\n",
     "# Get a list of countries in each continent for calculating lengths/areas by country later\n",
-    "sa_countries = continent_iso[continent_iso.continent == 'South America']\n",
+    "sa_countries = continent_iso[continent_iso.continent == 'Europe']\n",
     "\n",
     "# Create empty lists\n",
     "country_sums = []\n",
@@ -484,7 +484,7 @@
     "ax.bar(sa_affected[\"Country\"],\n",
     "        sa_affected[\"Affected_KM\"], color='blue', label=\"River Length\")\n",
     "plt.legend(loc=\"upper right\")\n",
-    "ax.set(title=\"Length of Potential River Reaches impacted by Future Dam Construction\\nSouth America\",\n",
+    "ax.set(title=\"Length of Potential River Reaches impacted by Future Dam Construction\\nEurope\",\n",
     "       xlabel=\"Country\", ylabel=\"Kilometers\")\n",
     "ax.text(0.5, -0.1,\n",
     "        \"Data Source: Free Flowing Rivers Database\",\n",
@@ -507,7 +507,7 @@
     "ax.bar(sa_affected[\"Country\"],\n",
     "        sa_affected[\"Affected_Area\"], color='orange', label=\"Land Area\")\n",
     "plt.legend(loc=\"upper right\")\n",
-    "ax.set(title=\"Potential Protected Areas impacted by Future Dam Construction\\nSouth America\",\n",
+    "ax.set(title=\"Potential Protected Areas impacted by Future Dam Construction\\nEurope\",\n",
     "       xlabel=\"Country\", ylabel=\"Square Meters\")\n",
     "ax.set_yscale(\"log\")\n",
     "ax.text(0.5, -0.1,\n",
@@ -524,7 +524,7 @@
    "outputs": [],
    "source": [
     "# Get continent border for plotting\n",
-    "sam_border = continent_borders[continent_borders['CONTINENT'] == \"South America\"]\n",
+    "eur_border = continent_borders[continent_borders['CONTINENT'] == \"Europe\"]\n",
     "\n",
     "# Buffer rivers for nicer map\n",
     "dor_0to5 = dor_0to5.buffer(5000)\n",
@@ -541,9 +541,9 @@
    "outputs": [],
    "source": [
     "# Get continent dams for plotting\n",
-    "sam_dams = dams_all[dams_all['Continent'] == \"South America\"]\n",
+    "eur_dams = dams_all[dams_all['Continent'] == \"Europe\"]\n",
     "\n",
-    "sam_dams = sam_dams.to_crs('epsg:4087')"
+    "eur_dams = eur_dams.to_crs('epsg:4087')"
    ]
   },
   {
@@ -565,7 +565,7 @@
     "                          markerfacecolor='gray', label='Proposed Dam Site')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
-    "sam_border.plot(ax=ax, color=\"none\",  edgecolor=\"black\", linewidth=2)\n",
+    "eur_border.plot(ax=ax, color=\"none\",  edgecolor=\"black\", linewidth=2)\n",
     "wdpa_ramsar_sa.plot(ax=ax, color=\"lightgreen\", edgecolor='none')\n",
     "dor_0to5.plot(ax=ax,\n",
     "              color='blue', edgecolor='none')\n",
@@ -577,11 +577,11 @@
     "                color='red', edgecolor='none')\n",
     "dor_over20.plot(ax=ax,\n",
     "                color='magenta', edgecolor='none')\n",
-    "sam_dams.plot(ax=ax,\n",
+    "eur_dams.plot(ax=ax,\n",
     "                   color='gray', markersize=50)\n",
     "ctx.add_basemap(ax, url=ctx.providers.Stamen.Terrain, zoom=0)\n",
     "ax.set_title(\n",
-    "    'All Protected Areas, Proposed Dams, And Large Rivers (Class > 2)\\n by Degree of Regulation in S. America', size=20)\n",
+    "    'All Protected Areas, Proposed Dams, And Large Rivers (Class > 2)\\n by Degree of Regulation in Europe', size=20)\n",
     "ax.set_axis_off()\n",
     "ax.legend(handles=[black_line, blue_line, yellow_line, orange_line, red_line, magenta_line, lightgreen_patch, black_dot],\n",
     "          fontsize=15,\n",
@@ -598,7 +598,7 @@
    "source": [
     "fig, ax1 = plt.subplots(figsize=(20, 10))\n",
     "\n",
-    "plt.title(\"Potential River Reaches and Protected Areas in South America\\nImpacted by Future Dam Construction\", size=30)\n",
+    "plt.title(\"Potential River Reaches and Protected Areas in Europe\\nImpacted by Future Dam Construction\", size=30)\n",
     "\n",
     "ax1.set_xlabel('Country')\n",
     "ax1.set_ylabel('Area (sq. meters)', color='orange')\n",
