--- a/final-notebooks/dam-impacts-on-protected-areas-calc-africa.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-africa.ipynb
@@ -494,7 +494,7 @@
     "                color='magenta', edgecolor='none')\n",
     "africa_dams.plot(ax=ax,\n",
     "                   color='gray', markersize=50)\n",
-    "ctx.add_basemap(ax, url=ctx.providers.Stamen.Terrain, zoom=0)\n",
+    "ctx.add_basemap(ax, crs='epsg:4087'))\n",
     "ax.set_title(\n",
     "    'Figure 1: All Protected Areas, Proposed Dams,\\n And Large Rivers (Class > 2) by Degree of Regulation in Africa', size=20)\n",
     "ax.set_axis_off()\n",
@@ -524,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
