--- a/final-notebooks/dam-impacts-on-protected-areas-calc-europe.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-europe.ipynb
@@ -14,6 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get Europe figshare data to work\n",
+    "# See if it runs with WDPA and ramsar merged\n",
+    "\n",
     "# Imports\n",
     "import warnings\n",
     "import os\n",
@@ -275,7 +278,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -357,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -365,53 +370,66 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\lherwehe\\Miniconda3\\envs\\earth-analytics-python\\lib\\site-packages\\pyproj\\crs.py:77: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method.\n",
-      "  return _prepare_from_string(\" \".join(pjargs))\n",
-      "C:\\Users\\lherwehe\\Miniconda3\\envs\\earth-analytics-python\\lib\\site-packages\\pandas\\core\\frame.py:7138: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n",
-      "  sort=sort,\n"
+      "  return _prepare_from_string(\" \".join(pjargs))\n"
      ]
     }
    ],
    "source": [
     "# Analyze Europe\n",
     "# Open WDPA polygons\n",
-    "wdpa_sa_polys = gpd.read_file(os.path.join(wd_path,\n",
+    "wdpa_eur_polys = gpd.read_file(os.path.join(wd_path,\n",
     "                                           \"earthpy-downloads\", \"WDPA_Europe\", \"WDPA_Europe.shp\"))\n",
     "\n",
-    "# Data cleaning - remove polygons with no area & take only the needed columns from WDPA dataset\n",
-    "wdpa_sa_polys = wdpa_sa_polys[wdpa_sa_polys.geometry != None]\n",
+    "# Data cleaning - remove polygons with no area\n",
+    "wdpa_eur_polys = wdpa_eur_polys[wdpa_eur_polys.geometry != None]\n",
     "\n",
     "# Merge continent names with WDPA data for analyzing by continent\n",
-    "wdpa_sa_polys = pd.merge(wdpa_sa_polys, continent_iso,\n",
+    "wdpa_eur_polys = pd.merge(wdpa_eur_polys, continent_iso,\n",
     "                        left_on='PARENT_ISO', right_on='ISO3')\n",
     "\n",
     "# Take only the columns we need\n",
-    "wdpa_sa_polys = wdpa_sa_polys[[\n",
+    "wdpa_eur_polys = wdpa_eur_polys[[\n",
     "    'NAME', 'DESIG', 'PARENT_ISO', 'Shape_Area', 'continent', 'geometry']]\n",
     "\n",
-    "# Reporject WDPA data\n",
-    "wdpa_sa_polys = wdpa_sa_polys.to_crs('epsg:4087')\n",
+    "# Reproject WDPA data\n",
+    "wdpa_eur_polys = wdpa_eur_polys.to_crs('epsg:4087')\n",
     "\n",
-    "# Get the combined WDPA & ramsar areas for selected continent\n",
-    "wdpa_ramsar_sa = all_pa_continent(wdpa_sa_polys, ramsar_polys, \"Europe\")\n",
-    "\n",
+    "# # Get the combined WDPA & ramsar areas for selected continent\n",
+    "# wdpa_ramsar_sa = all_pa_continent(wdpa_eur_polys, ramsar_polys, \"Europe\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Getting river length affected\n",
     "# Overlay current rivers on protected areas for selected continent to get ONLY rivers the overlap PAs\n",
-    "river_overlap_sa = gpd.overlay(\n",
-    "    wdpa_ramsar_sa, all_rivers_lg, how='intersection')\n",
-    "\n",
+    "river_overlap_eur = gpd.overlay(\n",
+    "    wdpa_eur_polys, all_rivers_lg, how='intersection')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Getting protected areas affected\n",
     "# Overlay projected rivers on pas for selected continent to get ONLY pas that overlap rivers\n",
-    "pa_overlap_sa = gpd.overlay(\n",
-    "    river_overlap_sa, wdpa_ramsar_sa, how='intersection')\n",
-    "\n",
+    "pa_overlap_eur = gpd.overlay(\n",
+    "    river_overlap_eur, wdpa_eur_polys, how='intersection')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get a list of countries in each continent for calculating lengths/areas by country later\n",
-    "sa_countries = continent_iso[continent_iso.continent == 'Europe']\n",
+    "eur_countries = continent_iso[continent_iso.continent == 'Europe']\n",
     "\n",
     "# Create empty lists\n",
     "country_sums = []\n",
@@ -419,15 +437,15 @@
     "countries = []\n",
     "\n",
     "# Sum up the total river length affected by country in the continent\n",
-    "for country in sa_countries.ISO3:\n",
+    "for country in eur_countries.ISO3:\n",
     "    country_sums.append((\n",
-    "        river_overlap_sa.loc[river_overlap_sa['PARENT_ISO'] == country, 'LENGTH_KM'].sum()).round(0))\n",
+    "        river_overlap_eur.loc[river_overlap_eur['PARENT_ISO'] == country, 'LENGTH_KM'].sum()).round(0))\n",
     "    area_sums.append((\n",
-    "        pa_overlap_sa.loc[pa_overlap_sa['PARENT_ISO_1'] == country, 'Shape_Area_1'].sum()).round(0))\n",
+    "        pa_overlap_eur.loc[pa_overlap_eur['PARENT_ISO_1'] == country, 'Shape_Area_1'].sum()).round(0))\n",
     "    countries.append(country)\n",
     "\n",
     " # Create a pandas dataframe of lengths and areas affected\n",
-    "sa_output = pd.DataFrame(list(zip(countries, country_sums, area_sums)), columns=[\n",
+    "eur_output = pd.DataFrame(list(zip(countries, country_sums, area_sums)), columns=[\n",
     "                           'Country', 'Affected_KM', 'Affected_Area'])"
    ]
   },
@@ -440,7 +458,7 @@
    "outputs": [],
    "source": [
     "# View data\n",
-    "sa_output.head()"
+    "eur_output.head()"
    ]
   },
   {
@@ -450,11 +468,11 @@
    "outputs": [],
    "source": [
     "# Remove rows with 0 values for rivers.\n",
-    "sa_affected = sa_output[sa_output.Affected_KM !=0]\n",
-    "sa_affected = sa_output[sa_output.Affected_Area !=0]\n",
+    "eur_affected = eur_output[eur_output.Affected_KM !=0]\n",
+    "eur_affected = eur_output[eur_output.Affected_Area !=0]\n",
     "\n",
     "\n",
-    "sa_affected"
+    "eur_affected"
    ]
   },
   {
@@ -464,8 +482,8 @@
    "outputs": [],
    "source": [
     "# Export to csv.\n",
-    "affected_path = os.path.join(wd_path, \"sa_affected.csv\" )\n",
-    "sa_affected.to_csv(affected_path)"
+    "affected_path = os.path.join(wd_path, \"eur_affected.csv\" )\n",
+    "eur_affected.to_csv(affected_path)"
    ]
   },
   {
@@ -481,8 +499,8 @@
     "# sns.set(font_scale=1.5, style='whitegrid')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(20, 10))\n",
-    "ax.bar(sa_affected[\"Country\"],\n",
-    "        sa_affected[\"Affected_KM\"], color='blue', label=\"River Length\")\n",
+    "ax.bar(eur_affected[\"Country\"],\n",
+    "        eur_affected[\"Affected_KM\"], color='blue', label=\"River Length\")\n",
     "plt.legend(loc=\"upper right\")\n",
     "ax.set(title=\"Length of Potential River Reaches impacted by Future Dam Construction\\nEurope\",\n",
     "       xlabel=\"Country\", ylabel=\"Kilometers\")\n",
@@ -504,8 +522,8 @@
     "# sns.set(font_scale=1.5, style='whitegrid')\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(20, 10))\n",
-    "ax.bar(sa_affected[\"Country\"],\n",
-    "        sa_affected[\"Affected_Area\"], color='orange', label=\"Land Area\")\n",
+    "ax.bar(eur_affected[\"Country\"],\n",
+    "        eur_affected[\"Affected_Area\"], color='orange', label=\"Land Area\")\n",
     "plt.legend(loc=\"upper right\")\n",
     "ax.set(title=\"Potential Protected Areas impacted by Future Dam Construction\\nEurope\",\n",
     "       xlabel=\"Country\", ylabel=\"Square Meters\")\n",
@@ -566,7 +584,7 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
     "eur_border.plot(ax=ax, color=\"none\",  edgecolor=\"black\", linewidth=2)\n",
-    "wdpa_ramsar_sa.plot(ax=ax, color=\"lightgreen\", edgecolor='none')\n",
+    "wdpa_eur_polys.plot(ax=ax, color=\"lightgreen\", edgecolor='none')\n",
     "dor_0to5.plot(ax=ax,\n",
     "              color='blue', edgecolor='none')\n",
     "dor_5to10.plot(ax=ax,\n",
@@ -579,7 +597,7 @@
     "                color='magenta', edgecolor='none')\n",
     "eur_dams.plot(ax=ax,\n",
     "                   color='gray', markersize=50)\n",
-    "ctx.add_basemap(ax, url=ctx.providers.Stamen.Terrain, zoom=0)\n",
+    "ctx.add_basemap(ax, crs='epsg:4087')\n",
     "ax.set_title(\n",
     "    'All Protected Areas, Proposed Dams, And Large Rivers (Class > 2)\\n by Degree of Regulation in Europe', size=20)\n",
     "ax.set_axis_off()\n",
@@ -602,8 +620,8 @@
     "\n",
     "ax1.set_xlabel('Country')\n",
     "ax1.set_ylabel('Area (sq. meters)', color='orange')\n",
-    "ax1.bar(sa_affected[\"Country\"],\n",
-    "        sa_affected[\"Affected_Area\"], color='orange', label=\"Land Area\")\n",
+    "ax1.bar(eur_affected[\"Country\"],\n",
+    "        eur_affected[\"Affected_Area\"], color='orange', label=\"Land Area\")\n",
     "ax1.tick_params(axis='y')\n",
     "\n",
     "ax1.grid(False)\n",
@@ -612,8 +630,8 @@
     "\n",
     "\n",
     "ax2.set_ylabel ('Length (km)', color='blue')\n",
-    "ax2.plot(sa_affected[\"Country\"],\n",
-    "        sa_affected[\"Affected_KM\"], marker='o', color='blue', markersize=10, linewidth=5, label=\"River Length\")\n",
+    "ax2.plot(eur_affected[\"Country\"],\n",
+    "        eur_affected[\"Affected_KM\"], marker='o', color='blue', markersize=10, linewidth=5, label=\"River Length\")\n",
     "ax2.tick_params(axis='y')\n",
     "\n",
     "ax2.grid(False)\n",
