--- a/final-notebooks/dam-impacts-on-protected-areas-calc-sam.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-sam.ipynb
@@ -579,7 +579,7 @@
     "                color='magenta', edgecolor='none')\n",
     "sam_dams.plot(ax=ax,\n",
     "                   color='gray', markersize=50)\n",
-    "ctx.add_basemap(ax, url=ctx.providers.Stamen.Terrain, zoom=0)\n",
+    "ctx.add_basemap(ax, crs='epsg:4087')\n",
     "ax.set_title(\n",
     "    'All Protected Areas, Proposed Dams, And Large Rivers (Class > 2)\\n by Degree of Regulation in S. America', size=20)\n",
     "ax.set_axis_off()\n",
